MakeCudaLibraryFromDir(LIBNAME SOURCE_FILES)
target_link_libraries(${LIBNAME} PRIVATE common_util)
#find_package(CUDAProfilingAPI REQUIRED)
#target_link_libraries(${LIBNAME} PRIVATE ${nvperf_host_LIBRARY})
#target_link_libraries(${LIBNAME} PRIVATE ${nvperf_target_LIBRARY})
AddCUPTIDependencies(${LIBNAME})
