#set(RLS_ENABLE_HW_COUNTERS OFF)
set(RLS_ENABLE_HW_COUNTERS ON)
MakeCudaLibraryFromDir(LIBNAME SOURCE_FILES)
if (RLS_ENABLE_HW_COUNTERS)
    message("> RLS_ENABLE_HW_COUNTERS=ON")
    target_compile_definitions(${LIBNAME} PRIVATE -DRLS_ENABLE_HW_COUNTERS)
    #    add_definitions(-DRLS_ENABLE_HW_COUNTERS)
else()
    message("> RLS_ENABLE_HW_COUNTERS=OFF")
endif()
#target_link_libraries(${LIBNAME} PRIVATE common_util)
AddTensorRTDeps(${LIBNAME})
if (RLS_ENABLE_HW_COUNTERS)
    AddCUPTIDependencies(${LIBNAME})
endif()
#target_link_libraries(${LIBNAME} PRIVATE nvToolsExt)
